game/css/style.css
@import url(https://fonts.googleapis.com/css?family=Kalam);

body {
  cursor: url('http://www.rw-designer.com/cursor-view/30925.png'), auto;
  background-image: url('http://www.theavengers.com.au/img/header.jpg');
  background-repeat: no-repeat;
  background-size: cover;
} 

h1{
  text-align:center;
  color: #FFFFFF;
  font-family: Kalam;
}

h2{
  text-align:center;
  color: #FFFFFF;
  font-family: Kalam;
}

h3{
  text-align: center;
  color: #FFFFFF;
  font-family: Kalam;
}

button{
  margin-left: 640px;
  padding: 20px;
  font-size: 2.5em;
  border:3.5px dotted #000000;
  font-family: Kalam;
}

button:hover {
  font-size: 2.5em;
  color: #FFFFFF;
  padding:20px;
  border: 3.5px dotted #FFFFFF;
  background: #000000;
  font-family: Kalam;
}

#scoreboard {
  background: #ffffff;
  border: 5px solid #000000;
  width: 100px;
  length: 500x;
  font-family: 'Kalam';
  font-size: 25px;
}

#scoretext {
  color: #000;
  display: inline-block;
}

#points {
  font-family: Kalam;
  color: 000;
  text-align: center;
  display: inline-block;
}

.RedSkull {
  width: 7%;
}

#RedSkull1 {
  position: absolute;
}

#RedSkull2 {
  position: absolute;
  top: 300px;
  left: 300px;
}

#RedSkull3 {
  position: absolute;
  top: 500px;
  left: 300px;
}

#RedSkull4 {
  position: absolute;
  top: 300px;
  left: 600px;
}


#RedSkull5 {
  position: absolute;
  top: 500px;
  left: 600px;
}

#RedSkull6 {
  position: absolute;
  top: 550px;
  left: 800px;
}

#Thanos1 {
  width: 10%;
  position: absolute;
}
#Thanos2 {
  width: 10%;
  position: absolute; 
  top: 300px;
  left: 800px;
}
#Thanos3 {
  width: 10%;
  position: absolute; 
  top: 400px;
  left: 500px;
}
#Thanos4 {
  width: 10%;
  position: absolute; 
  top: 300px;
  left: 100px;
}
#Thanos5 {
  width: 10%;
  position: absolute; 
  top: 400px;
  left: 800px;
}
#Thanos6 {
  width: 10%;
  position: absolute; 
  top: 400px;
  left: 1000px;
}

.Ultron {
  width: 100px;
}

#Ultron1 {
  position: absolute; 
  top: 200px;
  left: 600px;
}

#Ultron2 {
  position: absolute; 
  top: 300px;
  left: 400px;
}

#Ultron3 {
  position: absolute; 
  top: 100px;
  left: 200px;
}

#Ultron4 {
  position: absolute; 
  top: 500px;
  left: 400px;
}

#Ultron5 {
  position: absolute; 
  top: 10px;
  left: 900px;
}

#Ultron6 {
  position: absolute; 
  top: 30px;
  left: 1100px;
}

#Loki1 {
  width: 10%;
  position: absolute; 
}

#Loki2 {
  width: 10%;
  position: absolute; 
  top: 70px;
  left: 400px;
}
#Loki3 {
  width: 10%;
  position: absolute; 
  top: 60px;
  left: 700px;
}
#Loki4 {
  width: 10%;
  position: absolute; 
  top: 150px;
  left: 300px;
}
#Loki5 {
  width: 10%;
  position: absolute; 
  top: 500px;
  left: 1200px;
}
#Loki6 {
  width: 10%;
  position: absolute; 
  top: 300px;
  left: 900px;
}

#Thor {
  width: 10%;
  position: absolute; 
  top: 300px;
  left: 1100px;
}
#Ironman {
  width: 10%;
  position: absolute; 
  top: 150px;
  left: 980px;
}
#BlackWidow {
  width: 10%;
  position: absolute; 
  top: 150px;
  left: 1200px;
}
#Hulk {
  width: 10%;
  position: absolute;
}

